--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>X by 2 Code Share</title>
-        <link rel="stylesheet" href="style.css" />
-        <script src="togetherjs-config.js"></script>
+        <link rel="stylesheet" href="style/style.css" />
+        <script src="script/togetherjs-config.js"></script>
         <script src="https://togetherjs.com/togetherjs-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.01/ace.js"></script>
-        <script src="collab.js"></script>
+        <script src="script/collab.js"></script>
         <script>
             window.addEventListener("load", function() {
                 App.run();
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="controls">
-            <img src="logo.svg" alt="X by 2" />
+            <img src="img/logo.svg" alt="X by 2" />
             <select id="language">
                 <option value="" disabled selected>Select Language</option>k
             	<option value="c_cpp">C/C++</option>
