Add meta tag for IE=edge
minor typo fixes and language changes.

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
         <title>X by 2 Code Share</title>
         <link rel="stylesheet" href="style/style.css" />
@@ -18,10 +19,11 @@
         <div id="controls">
             <img src="img/logo.svg" alt="X by 2" />
             <select id="language">
-                <option value="" disabled selected>Select Language</option>k
+                <option value="" disabled selected>Select Language</option>
             	<option value="c_cpp">C/C++</option>
             	<option value="clojure">Clojure</option>
             	<option value="csharp">C#</option>
+            	<option value="erlang">Erlang</option>
             	<option value="golang">Go</option>
             	<option value="haskell">Haskell</option>
             	<option value="html">HTML</option>
@@ -32,7 +34,6 @@
             	<option value="ruby">Ruby</option>
             	<option value="scala">Scala</option>
             	<option value="sql">SQL</option>
-            	<option value="vbscript">VBScript</option>
             </select>
             <button id="share">Share</button>
         </div>
